Add: improvements C1 slides.

--- a/slides/C1.html
+++ b/slides/C1.html
@@ -228,7 +228,13 @@ Chiang, Ted. 2023. “ChatGPT Is a Blurry JPEG of the Web.” _The New Yorker_, 
 
 <!-- .slide: data-background-opacity="0.55" data-background-image="https://media.vigliensoni.com/clips/chiang23chatgpt.gif" -->
 ## _ChatGPT is a blurry JPEG of the Web_
-</div></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" data-auto-animate="true" -->
+</div>
+
+<aside class="notes"><ul>
+<li>what emerging tools, technologies, and techniques are mentioned in the article?</li>
+<li>what questions were triggered by the reading?</li>
+</ul>
+</aside></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" data-auto-animate="true" -->
 <div class="" style="position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center" absolute="true">
 
 <div class="" style="position: absolute; left: 0%; top: 0%; height: 6%; width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center" >
@@ -293,7 +299,7 @@ Chiang, Ted. 2023. “ChatGPT Is a Blurry JPEG of the Web.” _The New Yorker_, 
 
 <!-- .slide: data-background-opacity="0.25" data-background-image="https://media.vigliensoni.com/clips/chiang23chatgpt.gif" -->
 
-## _<mark style="background: #FF5582A6;">ChatGPT </mark> is a blurry <mark>JPEG</mark> of the <mark style="background: #698BD0;">Web   </mark>_
+## _<mark style="background: #FF5582A6;">ChatGPT </mark> is a blurry <mark>JPEG </mark> of the <mark style="background: #698BD0;">Web   </mark>_
 </div>
 
 <aside class="notes"><ul>
@@ -434,8 +440,6 @@ Chiang, Ted. 2023. “ChatGPT Is a Blurry JPEG of the Web.” _The New Yorker_, 
 <!-- .slide: data-background-opacity="0.25" data-background-image="https://media.vigliensoni.com/clips/chiang23chatgpt.gif" -->
 
 ## _<mark style="background: #FF5582A6;">ChatGPT </mark> is a blurry <mark>JPEG </mark> of the <mark style="background: #698BD0;">Web   </mark>_
-
-*“When we’re dealing with sequences of words, lossy compression looks smarter than lossless compression”*
 
 In the context of language models, can the ability to compress information effectively indicate genuine understanding?
 </div></script></section><section  data-markdown><script type="text/template"><!-- .slide: class="drop" data-auto-animate="true" -->
